k8s/arash-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arash-backend
  namespace: grupp3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arash-guestbook
      component: backend
  template:
    metadata:
      labels:
        app: arash-guestbook
        component: backend
    spec:
      containers:
        - name: backend
          image: arashr/arash-guestbook:backend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: arash-backend
  namespace: grupp3
spec:
  type: ClusterIP
  selector:
    app: arash-guestbook
    component: backend
  ports:
    - port: 8080
