k8s/arash-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arash-postgres
  namespace: grupp3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arash-guestbook
      component: postgres
  template:
    metadata:
      labels:
        app: arash-guestbook
        component: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          volumeMounts:
            - name: arash-postgres-data
              mountPath: /var/lib/postgresql
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: arash-postgres-data
          persistentVolumeClaim:
            claimName: arash-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: arash-postgres
  namespace: grupp3
spec:
  type: ClusterIP
  selector:
    app: arash-guestbook
    component: postgres
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arash-redis
  namespace: grupp3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arash-guestbook
      component: redis
  template:
    metadata:
      labels:
        app: arash-guestbook
        component: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          volumeMounts:
            - name: arash-redis-data
              mountPath: /var/lib/redis/data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: arash-redis-data
          persistentVolumeClaim:
            claimName: arash-redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: arash-redis
  namespace: grupp3
spec:
  type: ClusterIP
  selector:
    app: arash-guestbook
    component: redis
  ports:
    - port: 6379
