k8s/arash-guestbook-service.yaml
apiVersion: v1
kind: Service                                                             
metadata:                                                                 
  name: arash-nginx-guestbook
  labels:
    app: arash-nginx-guestbookk
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: arash-nginx-guestbook
