k8s/arash-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arash-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arash-guestbook
      component: frontend
  template:
    metadata:
      labels:
        app: arash-guestbook
        component: frontend
    spec:
      containers:
        - name: frontend
          image: arashr/arash-guestbook:frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: arash-frontend
spec:
  type: ClusterIP
  selector:
    app: arash-guestbook
    component: frontend
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: arash-frontend
spec:
  to:
    kind: Service
    name: arash-frontend
  port:
    targetPort: 8080
